--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>2.0.7-SNAPSHOT</version>
+	<version>2.0.8-SNAPSHOT</version>
 	
 	<name>maven-web-application</name>
 
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>ACADA Learning Releases Nexus Repository</name>
-	      <url>http://18.223.122.174:8081/repository/devops-release/</url>
+	      <url>http://18.221.114.96:8081/repository/tosinreleaserepo/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>ACADA Learning Snapshot Nexus Repository </name>
-	      <url>http://18.223.122.174:8081/repository/devops-snapshot/</url>
+	      <name>Tosin Snapshot Nexus Repository </name>
+	      <url>http://18.221.114.96:8081/repository/tosinwebappsnapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
