--- a/pom.xml
+++ b/pom.xml
@@ -96,15 +96,15 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>ACADA Learning Releases Nexus Repository</name>
+	      <name>Temi practice Releases Nexus Repository</name>
 	      <url>http://54.225.14.135:8081/repository/Release/</url>
 	    </repository>
 	    
-	    <snapshotRepository>
+	    <ReleaseRepository>
 	      <id>nexus</id>
-	      <name>Tosin Snapshot Nexus Repository </name>
+	      <name>Temi Release Nexus Repository </name>
 	      <url>http://54.225.14.135:8081/repository/Release/</url>
-	    </snapshotRepository>
+	    </ReleaseRepository>
 	    
 	</distributionManagement>
 	
