--- a/pom.xml
+++ b/pom.xml
@@ -100,11 +100,11 @@
 	      <url>http://54.225.14.135:8081/repository/Release/</url>
 	    </repository>
 	    
-	    <ReleaseRepository>
+	    <releaseRepository>
 	      <id>nexus</id>
 	      <name>Temi Release Nexus Repository </name>
 	      <url>http://54.225.14.135:8081/repository/Release/</url>
-	    </ReleaseRepository>
+	    </releaseRepository>
 	    
 	</distributionManagement>
 	
