--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
 	      <url>http://54.225.14.135:8081/repository/Release/</url>
 	    </repository>
 	    
-	    <releaseRepository>
+	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Temi Release Nexus Repository </name>
 	      <url>http://54.225.14.135:8081/repository/Release/</url>
